apps/code/neenee-code/src/tui/snapshots/neenee_code__tui__question_model__tests__question_modal_film_multiselect_interaction.snap
---
source: apps/code/neenee-code/src/tui/question_model.rs
assertion_line: 1114
expression: film
---
=== open ===






           Question

           Which features?

             [ ] a
             [ ] b
             [ ] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== down → highlight 'b' ===






           Question

           Which features?

             [ ] a
             [ ] b
             [ ] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== space → toggle 'b' selected ===






           Question

           Which features?

             [ ] a
             [x] b
             [ ] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== '1' → select 'a' ===






           Question

           Which features?

             [x] a
             [x] b
             [ ] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== '4' + 'custom' → focus 'Other', type ===






           Question

           Which features?

             [x] a
             [x] b
             [ ] c
             [x] Other
                cust





           ↑↓ navigate · Enter submit · Esc cancel
