apps/code/neenee-code/src/tui/snapshots/neenee_code__tui__question_model__tests__question_modal_film_single_select_jump.snap
---
source: apps/code/neenee-code/src/tui/question_model.rs
assertion_line: 1138
expression: film
---
=== open (first row highlighted = selected) ===




          Question

          Style
          Which error handling crate?

             anyhow                                    ▼

          ↑↓ navigate · Enter submit · Esc cancel

=== down → highlight 'thiserror' (selected, no marker) ===




          Question

                                                       ▲
             anyhow
               Simple
             thiserror                                 ▼

          ↑↓ navigate · Enter submit · Esc cancel

=== '3' → jump to 'Other' (now the live selection) ===




          Question

               Simple                                  ▲
             thiserror
               Structured
             Other

          ↑↓ navigate · Enter submit · Esc cancel
